--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="https://i.imgur.com/MOGMlEO.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anti-Gravity Platformer</title>
     <link rel="stylesheet" href="style.css">
@@ -16,5 +17,6 @@
     <canvas id="gameCanvas"></canvas>
     <script src="script.js"></script>
 </body>
+
 
 </html>
